--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: grey;
   color: white;
-  font-family: font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
 .container {
