--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: grey;
-  color: white;
+  background-color: white;
+  color: black;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
