--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -23,8 +23,7 @@ ul {
 
 li {
   color: grey;
-  font-size: 1.2em;
-  line-height: 1.6em;
+  line-height: 1.8em;
   list-style-type: none;
 }
 
@@ -34,6 +33,15 @@ li {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.box {
+  width: 40%;
+}
+
+#notes {
+  font-size: 1.4em;
+  padding: 0 2.2em 1em 2.2em;
 }
 
 /* FORMS */
@@ -50,18 +58,18 @@ textarea {
   border: none;
   font-size: 1.2em;
   resize: none;
-  margin: 1em;
+  margin-top: 1em;
 }
 
 button {
   background-color: grey;
   color: white;
-  font-size: 16px;
+  font-size: 1em;
   text-align: center;
   position: relative;
   border: none;
-  border-radius: 100px;
+  border-radius: 10px;
   box-shadow: none;
   padding: 10px 26px;
-  margin-top: 2em;
+  margin: 2em 0 2.4em 0;
 }
